; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/aicasm/extr_aicasm_symbol.c_symtable_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/aicasm/extr_aicasm_symbol.c_symtable_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 (%struct.TYPE_8__*, %struct.TYPE_7__*, %struct.TYPE_7__*, i32)*, i32 (%struct.TYPE_8__*)* }
%struct.TYPE_7__ = type { i32 }

@symtable = common dso_local global %struct.TYPE_8__* null, align 8
@R_FIRST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @symtable_close() #0 {
  %1 = alloca %struct.TYPE_7__, align 4
  %2 = alloca %struct.TYPE_7__, align 4
  %3 = alloca i32*, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** @symtable, align 8
  %5 = icmp ne %struct.TYPE_8__* %4, null
  br i1 %5, label %6, label %27

6:                                                ; preds = %0
  br label %7

7:                                                ; preds = %15, %6
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** @symtable, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %10 = load i64 (%struct.TYPE_8__*, %struct.TYPE_7__*, %struct.TYPE_7__*, i32)*, i64 (%struct.TYPE_8__*, %struct.TYPE_7__*, %struct.TYPE_7__*, i32)** %9, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** @symtable, align 8
  %12 = load i32, i32* @R_FIRST, align 4
  %13 = call i64 %10(%struct.TYPE_8__* %11, %struct.TYPE_7__* %1, %struct.TYPE_7__* %2, i32 %12)
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %7
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @memcpy(i32** %3, i32 %17, i32 8)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @symbol_delete(i32* %19)
  br label %7

21:                                               ; preds = %7
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** @symtable, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 1
  %24 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %23, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** @symtable, align 8
  %26 = call i32 %24(%struct.TYPE_8__* %25)
  br label %27

27:                                               ; preds = %21, %0
  ret void
}

declare dso_local i32 @memcpy(i32**, i32, i32) #1

declare dso_local i32 @symbol_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
